--- a/src/app/opciones/opciones.component.html
+++ b/src/app/opciones/opciones.component.html
@@ -1,31 +1,40 @@
-<section class="example-section" [formGroup]="hashtags">
-  <h2>Hashtags:</h2>
-  <p><mat-checkbox formControlName="diaDelPadre">#diaDelPadre</mat-checkbox></p>
-  <p><mat-checkbox formControlName="hiphopalparque">#hiphopalparque</mat-checkbox></p>
-  <p><mat-checkbox formControlName="asianfestBogota">#asianfestBogota</mat-checkbox></p>
-  <p><mat-checkbox formControlName="diadelaMadre">#diadelaMadre</mat-checkbox></p>
-  <p><mat-checkbox formControlName="diadelTrabajador">#diadelTrabajador</mat-checkbox></p>
-  <p><mat-checkbox formControlName="daily">#daily</mat-checkbox></p>
+<section class="example-section">
+  <h2>Hashtags</h2>
+  <ul >
+    <li *ngFor="let subtask of hashtags">
+      <mat-checkbox [(ngModel)]="subtask.isSeleccionado" (change) ="onValoresCambiados($event)">
+        {{subtask.nombre}}
+      </mat-checkbox>
+    </li>
+  </ul>
 </section>
 
-<section class="example-section" [formGroup]="hashtags">
-  <h4>Has seleccionado:</h4>
-  {{hashtags.value | json}}
-</section>
-
-<div class = "rango-fechas-seccion">
+<div class="rango-fechas-seccion">
   <h2 id="example-radio-group-label">Rangos de fechas:</h2>
-  <mat-radio-group
+<!--   <mat-radio-group
     aria-labelledby="example-radio-group-label"
     class="example-radio-group"
-    [(ngModel)]="rangoFecha">
-    <mat-radio-button class="example-radio-button" *ngFor="let rangoFecha of rangoFechas" [value]="rangoFecha">
-      {{rangoFecha}}
+    (change) ="onValoresCambiados($event)"
+    [(ngModel)] = "rangoFechaSeleccionado"
+   >
+    <mat-radio-button
+      class="example-radio-button"
+      *ngFor="let rangoFecha of rangoFechas"
+      [value]="rangoFecha.rango"
+    >
+      {{ rangoFecha.rango }}
     </mat-radio-button>
-  </mat-radio-group>
-  <div>Has seleccionado: {{rangoFecha}}</div>
+  </mat-radio-group> -->
+  <mat-slider
+  thumbLabel
+  [displayWith]="formatLabel"
+  value = {rangoFechaSlider}
+  tickInterval="1"
+  step="1"
+  min="1"
+  max="12"
+  vertical="true"
+  aria-label="units"
+  (input)="onSliderCambiado($event)"></mat-slider>
 </div>
-
-
-
 
