--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -22,7 +22,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>Mercado  Smart</span>
+      <a routerLink="" id = "landingRuta">Mercado Smart</a>
     </mat-toolbar>
     <router-outlet> </router-outlet>
   </mat-sidenav-content>
