opciones de fecha solucionados

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -7,8 +7,7 @@
     <mat-nav-list>
       <a mat-list-item routerLink="tendencias">Tendencias</a>
       <a mat-list-item routerLink="tendencias">Personas</a>
-      <a mat-list-item routerLink="tendencias">Reporte</a>
-      <a mat-list-item routerLink="tendencias">Respaldo</a>
+      <a mat-list-item routerLink="reporte">Reporte</a>
       <a mat-list-item routerLink="tendencias">Configuraciones</a>
     </mat-nav-list>
   </mat-sidenav>
