--- a/src/app/pages/reporte/reporte.component.html
+++ b/src/app/pages/reporte/reporte.component.html
@@ -1,46 +1,30 @@
 <div class="grid-container">
-  <h1 class="mat-h1">Comparacion Interacciones Hashtags</h1>
+  <h1 class="mat-h1">Reporte Individual Hashtags</h1>
   <mat-grid-list cols="3" rowHeight="400px">
-    <mat-grid-tile colspan="2" rowspan="1">
-      <mat-card class="dashboard-card">
-        <mat-card-header>
-          <mat-card-title>Grafico de Lineas</mat-card-title>
-        </mat-card-header>
-        <mat-card-content class="dashboard-card-content">
-          <app-graf-lineas
-            [subjectDatosSeleccionados]="subjectDatosSeleccionados"
-            [dataSeleccionada]="data"
-          ></app-graf-lineas>
-        </mat-card-content>
-      </mat-card>
-    </mat-grid-tile>
-    <mat-grid-tile colspan="1" rowspan="3">
+    <mat-grid-tile colspan="1" rowspan="2">
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>Opciones</mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <app-opciones></app-opciones>
+          <app-opciones-reporte></app-opciones-reporte>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
     <mat-grid-tile colspan="2" rowspan="1">
       <mat-card class="dashboard-card">
         <mat-card-header>
-          <mat-card-title>Grafico Radar</mat-card-title>
+          <mat-card-title>Grafico Circular</mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <app-graf-radar
-            [subjectDatosSeleccionados]="subjectDatosSeleccionados"
-            [dataSeleccionada]="data"
-          ></app-graf-radar>
+          <app-graf-circulo></app-graf-circulo>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
     <mat-grid-tile colspan="2" rowspan="1">
       <mat-card class="dashboard-card">
         <mat-card-header>
-          <mat-card-title>Grafico de barras</mat-card-title>
+          <mat-card-title>Grafico de Barras</mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
           <app-graf-barras
